Removed help buttons. Removed option menu. Added icon to notes. Changed the look of measurement screens. Fixed issues with soft keyboard.

--- a/app/src/main/res/drawable-nodpi/ios_btn.xml
+++ b/app/src/main/res/drawable-nodpi/ios_btn.xml
@@ -14,7 +14,7 @@
          <shape android:shape="rectangle"  >
              <corners android:radius="8dip" />
              <stroke android:width="1dip" android:color="#FFFFFF" />
-             <solid  android:color="#4ea0ab"/>       
+             <solid  android:color="#F09918"/>
          </shape>
      </item>
      <item android:state_enabled="false">
