--- a/app/src/main/res/layout/leg.xml
+++ b/app/src/main/res/layout/leg.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Leg"
+        android:text="@string/leg"
         android:textColor="#F09918"
         android:textSize="48sp" />
 
