--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -28,7 +28,7 @@
             android:layout_height="0dip"
             android:gravity="center"
             android:weightSum="1.0" 
-            android:layout_weight=".56">
+            android:layout_weight=".66">
 
             <LinearLayout
                 android:layout_width="0dip"
@@ -42,8 +42,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:singleLine="true"
-                    android:hint="@string/gmail"
-                    android:inputType="textPersonName" >
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress" >
 
                     <requestFocus />
                 </EditText>
@@ -55,7 +55,8 @@
                     android:layout_marginTop="3dp"
                     android:ems="10"
                     android:singleLine="true"
-                    android:hint="@string/name" />
+                    android:hint="@string/name"
+                    android:inputType="textPersonName"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -114,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:gravity="center_horizontal"
-            android:layout_weight=".3"
+            android:layout_weight=".2"
             android:weightSum="1.0" >
 
             <LinearLayout
@@ -132,14 +133,6 @@
                     android:text="@string/create"
                     android:textColor="@drawable/btn_txt" />
 
-                <Button
-                    android:id="@+id/create_btn_cancel"
-                    style="@style/btnStyleios"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cancel"
-                    android:textColor="@drawable/btn_txt"
-                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
