--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -6,7 +6,9 @@
     android:layout_height="fill_parent"
     android:background="#ffffff"
     android:orientation="vertical" 
-    android:weightSum="1.0" >
+    android:weightSum="1.0"
+    android:focusable="false"
+    android:focusableInTouchMode="false">
 <FrameLayout 
     android:id="@+id/item_container"
     android:layout_width="match_parent"
@@ -28,8 +30,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight=".5"
-                android:text="Previous"
-                android:textColor="@drawable/btn_txt" />
+                android:text="@string/previous"
+                android:textColor="@drawable/btn_txt"
+                android:focusable="false" />
 
             <Button
                 android:id="@+id/item_btn_next"
@@ -38,8 +41,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight=".5"
-                android:text="Next"
-                android:textColor="@drawable/btn_txt" />
+                android:text="@string/next"
+                android:textColor="@drawable/btn_txt"
+                android:focusable="false" />
 
         </LinearLayout>
 
