--- a/app/src/main/res/layout/trunk.xml
+++ b/app/src/main/res/layout/trunk.xml
@@ -12,6 +12,6 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Trunk" />
+        android:text="@string/trunk" />
 
 </FrameLayout>
