Added edit button to View Saved Measurement. Updated local host.

--- a/app/src/main/res/menu/view_saved.xml
+++ b/app/src/main/res/menu/view_saved.xml
@@ -4,9 +4,9 @@
     tools:context="org.fashiontec.bodyapps.main.ViewSavedActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:id="@+id/saved_options_menu_edit"
+        android:title="@string/edit"
+        android:icon="@drawable/edit"
+        app:showAsAction="ifRoom"/>
 
 </menu>
