--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -45,7 +45,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".5"
                 android:gravity="center_horizontal"
-                android:orientation="vertical" 
+                android:orientation="vertical"
                 android:visibility="gone" >
 
                 <ImageView
@@ -71,6 +71,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Auto Sync"
+                    android:id="@+id/settings_chk_autosync" />
 
                 <Button
                     android:id="@+id/settings_btn_signout"
