--- a/app/src/main/res/layout-land/fragment_measurement.xml
+++ b/app/src/main/res/layout-land/fragment_measurement.xml
@@ -31,17 +31,9 @@
             android:layout_height="0dip"
             android:layout_gravity="center_vertical"
             android:layout_weight=".2"
-            android:weightSum="1.0" >
+            android:weightSum="1.0"
+            android:gravity="center_horizontal">
 
-            <Button
-                android:id="@+id/measurement_btn_save_sync"
-                style="@style/btnStyleios"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight=".5"
-                android:text="Save &amp; Sync"
-                android:textColor="@drawable/btn_txt" />
 
             <Button
                 android:id="@+id/measurement_btn_save"
@@ -49,8 +41,8 @@
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".5"
-                android:text="Save"
+                android:layout_weight=".7"
+                android:text="@string/save"
                 android:textColor="@drawable/btn_txt" />
 
         </LinearLayout>
