--- a/app/src/main/res/layout/fragment_measurement.xml
+++ b/app/src/main/res/layout/fragment_measurement.xml
@@ -35,17 +35,8 @@
             android:layout_height="0dip"
             android:layout_gravity="center_vertical"
             android:layout_weight=".1"
-            android:weightSum="1.0" >
-
-            <Button
-                android:id="@+id/measurement_btn_save_sync"
-                style="@style/btnStyleios"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight=".5"
-                android:text="Save &amp; Sync"
-                android:textColor="@drawable/btn_txt" />
+            android:weightSum="1.0"
+            android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/measurement_btn_save"
@@ -53,8 +44,8 @@
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".5"
-                android:text="Save"
+                android:layout_weight=".7"
+                android:text="@string/save"
                 android:textColor="@drawable/btn_txt" />
 
         </LinearLayout>
