--- a/app/src/main/res/layout/arm.xml
+++ b/app/src/main/res/layout/arm.xml
@@ -141,6 +141,31 @@
                 <!--android:layout_weight=".2"-->
                 <!--android:text="@string/help" />-->
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/arm_type"
+            android:textSize="@dimen/abc_action_bar_title_text_size"
+            android:layout_marginTop="10dp"
+            android:textColor="#d06516" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1" >
+            <Spinner
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:id="@+id/arm_type" />
+            <!--<Button-->
+            <!--android:id="@+id/btn_wrist_girth"-->
+            <!--android:layout_width="0dip"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight=".2"-->
+            <!--android:text="@string/help" />-->
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
