--- a/app/src/main/res/layout/trunk.xml
+++ b/app/src/main/res/layout/trunk.xml
@@ -1,11 +1,8 @@
 <!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)--><!--Licensed under LGPL, Version 3-->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="org.fashiontec.bodyapps.main.ItemActivity"
-    tools:ignore="MergeRootFrame">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,4 +71,4 @@
             <!--android:text="@string/help" />-->
         </LinearLayout>
     </LinearLayout>
-</FrameLayout>
+</ScrollView>
