--- a/app/src/main/res/menu/saved_context.xml
+++ b/app/src/main/res/menu/saved_context.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<!--Licensed under LGPL, Version 3-->
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/saved_cont_menu_edit"
