--- a/app/src/main/res/layout/saved_tab.xml
+++ b/app/src/main/res/layout/saved_tab.xml
@@ -45,7 +45,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
              android:layout_weight=".2"
-            android:src="@drawable/warning" />
+            android:src="@drawable/not_synced" />
 
     </LinearLayout>
 
