--- a/app/src/main/res/menu/saved_options_land.xml
+++ b/app/src/main/res/menu/saved_options_land.xml
@@ -1,16 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
 <!--Licensed under LGPL, Version 3-->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.fashiontec.bodyapps.main.ViewSavedActivity">
+    tools:context="org.fashiontec.bodyapps.main.ViewSavedActivity" >
 
-    <item android:id="@+id/saved_search"
+    <item android:id="@+id/saved_search_land"
         android:title="search"
         android:icon="@drawable/search"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.widget.SearchView" />
+
+    <item
+        android:id="@+id/saved_options_menu_edit"
+        android:title="@string/edit"
+        android:icon="@drawable/edit"
+        app:showAsAction="ifRoom"/>
+
 </menu>
