--- a/app/src/main/res/menu/view_saved.xml
+++ b/app/src/main/res/menu/view_saved.xml
@@ -12,4 +12,10 @@
         android:icon="@drawable/edit"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/saved_options_menu_delete"
+        android:title="@string/delete"
+        android:icon="@drawable/ic_launcher"
+        app:showAsAction="ifRoom"/>
+
 </menu>
