--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -1,7 +1,7 @@
 <!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
 <!--Licensed under LGPL, Version 3-->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -56,12 +56,42 @@
                     android:ems="10"
                     android:singleLine="true"
                     android:hint="@string/name"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textFilter" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
+                    android:weightSum="1.0">
+
+                    <TextView
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:text="@string/dob"
+                        android:layout_weight=".35"/>
+
+                    <TextView
+                        android:id="@+id/create_txt_dob"
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:layout_weight=".5"/>
+                    <Button
+                        android:id="@+id/create_btn_dob"
+                        style="@style/btnStyleios"
+                        android:layout_width="0dip"
+                        android:layout_height="28dip"
+                        android:text="iii"
+                        android:textColor="@drawable/btn_txt"
+                        android:layout_weight=".15"
+                        android:gravity="top|center" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal"
                     android:weightSum="1.0" >
 
@@ -108,15 +138,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:orientation="vertical" 
-            android:layout_weight=".07">
+            android:layout_weight=".06">
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
+            android:layout_weight=".15"
+            android:weightSum="1.0"
             android:gravity="center_horizontal"
-            android:layout_weight=".2"
-            android:weightSum="1.0" >
+            android:layout_alignParentBottom="true">
 
             <LinearLayout
                 android:layout_width="0dip"
@@ -129,7 +160,7 @@
                     android:id="@+id/create_btn_create"
                     style="@style/btnStyleios"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dip"
                     android:text="@string/create"
                     android:textColor="@drawable/btn_txt" />
 
@@ -138,5 +169,5 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
 
