--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
-<!--Licensed under LGPL, Version 3-->
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)--><!--Licensed under LGPL, Version 3-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#ffffff"
-    android:orientation="vertical" 
-    android:weightSum="1.0" >
+    android:orientation="vertical"
+    android:weightSum="1.0">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:orientation="vertical" 
-        android:layout_weight=".075">
-    </LinearLayout>
+        android:layout_weight=".075"
+        android:orientation="vertical" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight=".20"
         android:orientation="horizontal"
-        android:weightSum="1.0" >
+        android:weightSum="1.0">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical" 
-            android:layout_weight=".2">
-        </LinearLayout>
+            android:layout_weight=".2"
+            android:orientation="vertical" />
 
         <ImageView
             android:id="@+id/imageView1"
@@ -51,26 +46,25 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight=".075" >
-    </LinearLayout>
+        android:layout_weight=".075" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal"
         android:layout_weight=".7"
         android:gravity="center"
-        android:weightSum="1.0" >
+        android:weightSum="1.0">
 
         <LinearLayout
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight=".5"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/main_btn_create"
@@ -110,7 +104,9 @@
                 android:layout_marginTop="@dimen/abc_action_bar_default_height"
                 android:text="@string/exit"
                 android:textColor="@drawable/btn_txt" />
+
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
